<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
android:layout_height="wrap_content"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_margin="1dp"
xmlns:android="http://schemas.android.com/apk/res/android">

    <TableLayout
        android:id="@+id/tbLeaveAvailability"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="1dp"
            android:weightSum="10">

            <TextView
                android:layout_column="0"
                android:id="@+id/txt1"
                android:text="@string/bDate"
                style="@style/textBioValueText"
                android:layout_weight="2">
            </TextView>
            <TextView
                android:layout_column="1"
                android:id="@+id/txt2"
                android:text="@string/bFirstIn"
                style="@style/textBioValueText"
                android:layout_weight="2">
            </TextView>
            <TextView
                android:layout_column="2"
                android:id="@+id/txt3"
                android:text="@string/bLastOut"
                style="@style/textBioValueText"
                android:layout_weight="2">
            </TextView>
            <TextView
                android:layout_column="3"
                android:id="@+id/txt4"
                android:text="@string/bfirstInLate"
                style="@style/textBioValueText"
                android:gravity="right"
                android:paddingRight="10dp"
                android:layout_weight="2">
            </TextView>
            <TextView
                android:layout_column="3"
                android:id="@+id/txt5"
                android:text="@string/bLastOutEarly"
                style="@style/textBioValueText"
                android:paddingRight="10dp"
                android:gravity="right"
                android:layout_weight="2">
            </TextView>
        </TableRow>
    </TableLayout>

</androidx.cardview.widget.CardView>