<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_personaldetails"
            android:icon="@drawable/icon_profile"
            app:showAsAction="always"
            android:title="@string/hProfile"/>

        <item android:id="@+id/nav_dailyactivity" android:title="@string/hDailyActivity" >
            <menu>
                <item
                    android:id="@+id/nav_daily_activity"
                    android:icon="@drawable/icon_daily_activity_entry"
                    android:visible="true"
                    android:title="Daily Activity" />
                <item
                    android:id="@+id/nav_daily_activity_approval"
                    android:icon="@drawable/icon_daily_activity_approval"
                    android:visible="true"
                    android:title="Daily Activity Approval" />
            </menu>
        </item>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/hLogout" />
    </group>
</menu>
    <!--    </androidx.core.widget.NestedScrollView>-->
    <!--</androidx.cardview.widget.CardView>-->

    <!--</ScrollView>-->