<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="@dimen/corner_radious"
    app:cardElevation="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/btnselector_revarse"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayoutProfile"
            android:id="@+id/txtEmployeeNameLayout"
            android:layout_marginTop="1dp">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/lstextInputProfile"
                android:id="@+id/txtEmployeeName"
                android:hint="@string/lsName"
                android:drawableLeft="@drawable/ic_user_person_24"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayoutProfile"
            android:id="@+id/txtDepartmentLayout"
            android:layout_marginTop="1dp">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/lstextInputProfile"
                android:id="@+id/txtDepartment"
                android:hint="@string/pDepartment"
                android:drawableLeft="@drawable/p_department_24"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayoutProfile"
            android:id="@+id/txtDesignationLayout"
            android:layout_marginTop="1dp">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/lstextInputProfile"
                android:id="@+id/txtDesignation"
                android:hint="@string/pDesignation"
                android:drawableLeft="@drawable/p_division"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/textInputLayoutProfile"
            android:id="@+id/txtFeedbackDateLayout"
            android:layout_marginTop="1dp">
            <com.google.android.material.textfield.TextInputEditText
                style="@style/lstextInputProfile"
                android:id="@+id/txtFeedbackDate"
                android:hint="@string/lsFeedbackDate"
                android:drawableLeft="@drawable/ic_baseline_calendar_month_24"/>
        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:gravity="center_horizontal">
            <Button
                android:id="@+id/btnView"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btnselector"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="10dp"
                android:text="View"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnApprove"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/btnView"
                android:layout_toRightOf="@+id/btnView"
                android:background="@drawable/btnselector"
                android:text="Approve"
                android:textColor="@color/colorWhite"/>
            <Button
                android:id="@+id/btnReject"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/btnApprove"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@+id/btnApprove"
                android:layout_toRightOf="@+id/btnApprove"
                android:background="@drawable/btnselector"
                android:layout_marginLeft="10dp"
                android:text="Reject"
                android:textColor="@color/colorWhite"/>
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>